Fix deployment